[package]
name = "desk"
version = "0.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.32"
futures = "0.1.25"
tokio-core = "0.1.17"
tokio-io = "0.1.11"
tokio-modbus = { git = "https://github.com/mdonoughe/tokio-modbus", branch = "serial-traits", default-features = false, features = ["rtu"] }
tokio-serial = "3.2"
tokio-timer = "0.2"
