[package]
name = "desk"
version = "0.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
edition = "2021"

[dependencies]
clap = "2.32"
pin-project = "1.0.10"
tokio = { version = "1.15.0", features = ["macros", "rt", "time"] }
tokio-modbus = { version = "0.5.2", default-features = false, features = ["rtu"] }
tokio-serial = "5.4.1"
