[package]
name = "laing-controller"
version = "0.1.0"
authors = ["Matthew Donoughe <mdonoughe@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.52"
env_logger = "0.9.0"
log = "0.4.14"
pin-project = "1.0.10"
rumqttc = "0.10.0"
rustls = "0.19.1"
rustls-native-certs = "0.6.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
serde_yaml = "0.8.23"
tokio = { version = "1.15.0", features = ["fs", "macros", "rt", "time"] }
tokio-modbus = { version = "0.5.2", default-features = false, features = ["rtu"] }
tokio-serial = "5.4.1"

[target.'cfg(windows)'.dependencies]
eventlog = "0.1.1"
windows-service = "0.4.0"
